# DietXML

./: LICENSE  README.md
C#/: README.md
C#/src/: DietXML.csproj  DietXmlSchema.cs
Rust/: Cargo.toml  readme.md
Rust/examples/: basic_usage.rs
Rust/src/: builder.rs  lib.rs  schema.rs
Rust/test_data/: flights.csv
src/: DietXML.cs  DietXmlSchema.cs
